@startuml
class Arma {
   -x: float
   -y: float
   -estado: int
   +{abstract}update()
   +{abstract}render()
}

class AnimacionGranadaVerde {
   -movimiento: Animation
   -explosion: Explosion
   -apuntado: Apuntado
   -angulo: int
   -tiempo: int
   +update()
   +render()
}

class AnimacionDinamita {
   -movimiento: Animation
   -explosion: Explosion
   -tiempo: tiempo
   +update()
   +render()
}

class AnimacionAtaqueAereo {
   -misiles: Map<int, AnimacionMisil>
   +update()
   +render()
}

class AnimacionMisil {
    -movimiento: Animation
    -explosion: Explosion
    +update()
    +render()
}

class AnimacionBazooka {
   -movimiento: Animation
   -explosion: Explosion
   -apuntado: Apuntado
   -angulo: int
   -direccion: int
   +update()
   +render()
}

class Apuntado {
   -textura: Texture
   -mira: Mira
   -potencia: Potencia
   -tipoDeArma: int
   +aumentar_potencia()
   +aumentar_angulo()
   +decrementar_angulo()
   +render()
}

class Mira {
   -textura: Texture
   -angulo: int
   +render()
   +aumentar_angulo()
   +decrementar_angulo()
   +reiniciar()
}

class Potencia {
   -textura: Texture
   +update()
   +render()
   +reiniciar()
}

AnimacionGranadaVerde --up-|> Arma
AnimacionDinamita --right-|> Arma
AnimacionAtaqueAereo --left-|> Arma
AnimacionBazooka --up-|> Arma

AnimacionAtaqueAereo "  1  " -down-> "  6  " AnimacionMisil

AnimacionGranadaVerde -down-> Apuntado
AnimacionBazooka -down-> Apuntado

Apuntado --down> Mira
Apuntado --down> Potencia
@enduml
